# MyTinyRenderer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/raster/: CMakeLists.txt  line.cpp  line.hpp  triangle.cpp  triangle.hpp
src/tga/: CMakeLists.txt  objmodel.cpp  objmodel.hpp  vector.hpp
